User authentication, verification, token, parent and child branchInfo 2